exports[`Components <SearchBarTv /> renders correctly 1`] = `
<div
  id="search-bar-wrapper">
  <input
    onChange={[Function]}
    placeholder="Search Tv"
    type="text" />
</div>
`;

exports[`Components <TvDetails /> renders correctly 1`] = `
<div
  className="fullPage">
  <div
    className="movieContainer" />
</div>
`;

exports[`Components <TvOverviewPlaying /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      TV series Airing today
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components <TvOverviewPopular /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Popular TV series
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components <TvOverviewToprated /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Top Rated TV series
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components <TvOverviewUpcoming /> renders correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Tv"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Upcoming TV series
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components Movie Details should render correctly 1`] = `
<div
  className="fullPage">
  <div
    className="movieContainer" />
</div>
`;

exports[`Components Movies Playing should render correctly 1`] = `
<div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Movies Now Playing
    </h1>
    <div
      id="search-bar-wrapper">
      <input
        onChange={[Function]}
        placeholder="Search Movies"
        type="text" />
    </div>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components Movies Popular should render correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Movies"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Popular Movies
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components Movies Toprated should render correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Movies"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Top Rated Movies
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components Movies Upcoming should render correctly 1`] = `
<div>
  <div
    id="search-bar-wrapper">
    <input
      onChange={[Function]}
      placeholder="Search Movies"
      type="text" />
  </div>
  <div
    className="fullPage centeringDiv">
    <h1>
      Upcoming Movies this month
    </h1>
    <div
      className="movieContainer" />
  </div>
</div>
`;

exports[`Components Searchbar should render correctly 1`] = `
<div
  id="search-bar-wrapper">
  <input
    onChange={[Function]}
    placeholder="Search Movies"
    type="text" />
</div>
`;
